Closed
Bug 240358
Opened 22 years ago
Closed 22 years ago
[FIXr]XUL documents resulting from redirect get wrong base URI
Categories
(Core :: DOM: Core & HTML, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla1.7final
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
()
Details
(Keywords: fixed1.7)
Attachments
(1 file)
|
1.49 KB,
patch
|
jst
:
review+
jst
:
superreview+
tor
:
approval1.7+
|
Details | Diff | Splinter Review |
I don't know how long the testcase in the URL field will stick about, but this
is hard to reproduce without an http server. For reference, see the thread in
n.p.m.netlib starting with the "04/10/2004 11:58 AM" message from Neil with the
subject "Re: Jar Redirect Problem" (message id <c5994c$5ec1@ripley.netscape.com>).
The basic problem is that nsXULDocument::StartDocumentLoad differs from
nsDocument::StartDocumentLoad in the way it gets mDocumentURI; as a result, the
pre-redirect URI is used as the base URI for the document if the response was
redirected (eg via HTTP 30x response).
| Assignee | ||
Updated•22 years ago
|
Summary: XUL documents pick up incorrect base URI → XUL documents resulting from redirect get wrong base URI
| Assignee | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Priority: -- → P1
Summary: XUL documents resulting from redirect get wrong base URI → [FIX]XUL documents resulting from redirect get wrong base URI
Target Milestone: --- → mozilla1.7final
| Assignee | ||
Updated•22 years ago
|
Attachment #145972 -
Flags: superreview?(jst)
Attachment #145972 -
Flags: review?(jst)
Comment 2•22 years ago
|
||
Comment on attachment 145972 [details] [diff] [review]
Patch
+ // XXXbz this code is repeated from nsDocument::ResetToURI; we
+ // really need to refactor this part better.
That's nsDocument::Reset(), not ResetToURI().
Wanna file a followup bug to track the refactoring of this code?
r+sr=jst
Attachment #145972 -
Flags: superreview?(jst)
Attachment #145972 -
Flags: superreview+
Attachment #145972 -
Flags: review?(jst)
Attachment #145972 -
Flags: review+
| Assignee | ||
Comment 3•22 years ago
|
||
Comment on attachment 145972 [details] [diff] [review]
Patch
Could this please be approved for 1.7? This is very safe; all it does is make
remote XUL that's been redirected to by an HTTP redirect end up with the right
base URI.
Attachment #145972 -
Flags: approval1.7?
| Assignee | ||
Comment 4•22 years ago
|
||
Checked in for 1.8a. Bug 240419 filed. Leaving open for possible 1.7 checkin.
Summary: [FIX]XUL documents resulting from redirect get wrong base URI → [FIXr]XUL documents resulting from redirect get wrong base URI
Attachment #145972 -
Flags: approval1.7? → approval1.7+
| Assignee | ||
Comment 5•22 years ago
|
||
fixed on the 1.7 branch.
| Assignee | ||
Comment 6•22 years ago
|
||
*** Bug 240206 has been marked as a duplicate of this bug. ***
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•