Make nsXULDocument use the post-redirect URI as the document URI for non-chrome and non-resource channels, the way all other documents do.  Bug 240358, r+sr=jst